# trees

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: load_diabetes_data.ipynb
notebooks/.ipynb_checkpoints/: load_diabetes_data-checkpoint.ipynb
scripts/: create_tree.py
src/trees/: config.py  df.py  node.py  split.py  tree.py
src/trees/data/: dataset.py  diabetes.py  titanic.py
src/trees/splitting/: entropy.py  gini.py  split.py  xgb.py
src/trees/ui/: data.py  edge.py  node.py  session_state.py  tree.py
